tests/fixtures/syntax/valid/multiple_expectations_in_assertion_block.repor
case "multiple expectations" {
  $ echo hello
  assert {
    exit 0
    stdout contains "hello"
    stderr empty
  }
}
