tests/fixtures/syntax/invalid/string_literal_unclosed.repor
case "x" {
  $ true
  assert { stdout contains "never closed }